--- a/src/modules/ucar/index.scss
+++ b/src/modules/ucar/index.scss
@@ -3,3 +3,4 @@
 @import "../../common/components/index.scss";
 @import "./app.scss";
 @import "./pages/home/index.scss";
+@import "./pages/license/index.scss";
