--- a/src/views/ucar.ejs
+++ b/src/views/ucar.ejs
@@ -18,7 +18,9 @@
         var vConsole = new VConsole();
     </script>
     <%}%>
-
+    <script type="text/javascript">
+    window.__sourceMap = <%= JSON.stringify(htmlWebpackPlugin.files) %>;
+    </script>
     <script type="text/javascript">
         // 因为login登录组件是px布局 只能采取非缩放的rem布局 最好inline
         (function(doc, win) {
