--- a/src/views/ucar.ejs
+++ b/src/views/ucar.ejs
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>webpack4 demo </title>
+    <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+    <script>
+    if ('serviceWorker' in navigator) { navigator.serviceWorker.register('/service-worker.js?' + new Date); }
+    </script>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 
