--- a/src/views/ucar.ejs
+++ b/src/views/ucar.ejs
@@ -5,15 +5,21 @@
     <title>webpack4 demo </title>
     <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <script>
-    if ('serviceWorker' in navigator) { navigator.serviceWorker.register('/service-worker.js',
-        function(registration) {
-            console.log(registration);
-            if (registration.waiting) {
-                console.log(' registration waiting');
-            } else if (registration.active) {
-                console.log(' registration active');
-            }
-    }); }
+    if ('serviceWorker' in navigator ) {
+        navigator.serviceWorker.register('/service-worker.js',
+            function(registration) {
+                console.log(registration);
+                if (registration.waiting) {
+                    console.log(' registration waiting');
+                } else if (registration.active) {
+                    console.log(' registration active');
+                }
+                navigator.serviceWorker.postMessage({type:"send", content: '我在这里呀!'})
+            });
+        navigator.serviceWorker.ready.then(function(swRegistration) {
+            return swRegistration.sync.register('myFirstSync');
+        });
+    }
     </script>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
@@ -25,7 +31,7 @@
     <script type="text/javascript" src="//static.udache.com/agility-sdk/1.0.4/aio.js"></script>
 
     <% } else {%>
-    <script type="text/javascript" src="http://10.179.116.215:8089/sdk/dist/aio.js"></script>
+
     <!--测试环境下添加vconsole工具-->
     <script src="../static/js/vconsole.min.js"></script>
     <script>
